raw project generation using spec-kit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
   application:
     name: loan-management-system
-    
+  
+  security:
+    user:
+      name: admin
+      password: admin
+  
   jpa:
     hibernate:
       ddl-auto: create-drop
