--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,7 @@ springdoc.swagger-ui.enable=true
 # Management/Actuator
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+
+spring.security.user.name=admin
+spring.security.user.password=admin
