--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <project.build.outputTimestamp>1000</project.build.outputTimestamp>
         <maven.version>3.9.6</maven.version>
         <springdoc-openapi.version>2.1.0</springdoc-openapi.version>
+        <!-- Docker Hub configuration (user should be lowercase) -->
+        <docker.hub.user>${env.DOCKER_HUB_USER}</docker.hub.user>
     </properties>
 
     <dependencies>
@@ -204,7 +206,7 @@
                         <image>openjdk:17-jdk-slim</image>
                     </from>
                     <to>
-                        <image>docker.io/${env.DOCKER_HUB_USER}/loan-management-system:${project.version}</image>
+                        <image>docker.io/${docker.hub.user}/loan-management-system:${project.version}</image>
                         <auth>
                             <username>${env.DOCKER_HUB_USER}</username>
                             <password>${env.DOCKER_HUB_TOKEN}</password>
