--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -2,7 +2,7 @@
 # Use: java -jar app.jar --spring.profiles.active=mysql
 
 # MySQL Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/loan_management?useUnicode=true&characterEncoding=utf8mb4
+spring.datasource.url=jdbc:mysql://localhost:3306/loan_management?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
@@ -37,7 +37,6 @@ spring.datasource.hikari.max-lifetime=1800000
 # Application Configuration
 server.port=8080
 spring.application.name=loan-management-system
-spring.profiles.active=mysql
 
 # Logging Configuration
 logging.level.com.consumerfinance=DEBUG
@@ -45,7 +44,7 @@ logging.level.org.springframework.web=INFO
 logging.level.org.springframework.security=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.config=classpath:logback-mysql.xml
+logging.config=classpath:logback.xml
 
 # OpenAPI/Swagger Configuration
 springdoc.api-docs.path=/v3/api-docs
